--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "node app.js",
     "pretest": "eslint .",
     "test": "mocha",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha",
-    #"sonar": "node sonar-project.js"
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha"
     
   },
   "devDependencies": {
