--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,6 +12,7 @@ node {
                         }
                     }
                     stage('Build docker image') {
+                        tools {nodejs "nodejs"}
                         app = docker.build("fivebird/imagename")
                     }
                     stage('Push docker image to dockerhub') {
